Revert "background image"
This reverts commit 550ed8cdd7d39eba80d7c10c78e2f6075a54a535.

--- a/src/css/a.css
+++ b/src/css/a.css
@@ -8,5 +8,5 @@ h1 {
   font-weight: 400;
   padding: 2em;
   margin: 1em;
-  background: #ccc url(../img/foo.png) no-repeat;
+  background: #ccc;
 }
